// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SkillGrid /> renders 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-EHOje",
        "isStatic": false,
        "rules": Array [
          "
  display: grid;
  grid-gap: 0.2rem;
  grid-auto-flow: column;
  grid-template-rows: repeat(",
          [Function],
          ", 1fr);
  grid-auto-columns: auto;
",
        ],
      },
      "defaultProps": Object {
        "rows": 6,
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "rows": [Function],
      },
      "render": [Function],
      "styledComponentId": "sc-EHOje",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  rows={6}
/>
`;

exports[`<SkillGrid /> renders with rows 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-EHOje",
        "isStatic": false,
        "rules": Array [
          "
  display: grid;
  grid-gap: 0.2rem;
  grid-auto-flow: column;
  grid-template-rows: repeat(",
          [Function],
          ", 1fr);
  grid-auto-columns: auto;
",
        ],
      },
      "defaultProps": Object {
        "rows": 6,
      },
      "displayName": "styled.div",
      "foldedComponentIds": Array [],
      "propTypes": Object {
        "rows": [Function],
      },
      "render": [Function],
      "styledComponentId": "sc-EHOje",
      "target": "div",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  rows={2}
/>
`;

exports[`<SkillLine /> renders 1`] = `
<styled.div>
  <Checkbox
    name="skill_undefined"
    onChange={[Function]}
    size="xsmall"
  />
  <styled.p />
  <styled.p />
  <Styled(styled.p) />
</styled.div>
`;

exports[`<SkillLine /> renders with props 1`] = `
<styled.div>
  <Checkbox
    name="skill_test_skill"
    onChange={[Function]}
    size="xsmall"
  />
  <styled.p>
    10
  </styled.p>
  <styled.p>
    Test Skill
  </styled.p>
  <Styled(styled.p)>
    TST
  </Styled(styled.p)>
</styled.div>
`;
